--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'org.springframework.boot' version '2.7.1'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+    id 'com.google.cloud.tools.jib' version '3.2.0'
     id 'java'
 }
 
@@ -18,13 +19,31 @@ repositories {
     mavenCentral()
 }
 
+jib { // jib 정의
+    from { // 어떠한 베이스를 이미지를 기준으로 이 어플리케이션에 대한 이미지를 생성할 것인지
+        image = 'openjdk:11-jre-slim'
+    }
+    to {
+        image = 'fastcampus-loan'
+        tags = ['0.0.1']
+    }
+    container {
+        mainClass = 'com.fastcampus.loan.LoanApplication'
+        creationTime = 'USE_CURRENT_TIMESTAMP'
+        format = 'OCI'
+        volumes = ['/var/tmp']
+        entrypoint = ['java', '-cp', '/app/resources:/app/classes:/app/libs/*', 'com.fastcampus.loan.LoanApplication']
+
+    }
+}
+
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.modelmapper:modelmapper:3.1.0'
     implementation 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'com.h2database:h2'
-
+    runtimeOnly 'mysql:mysql-connector-java'
 //    compileOnly 'com.h2database:h2'
     compileOnly 'org.projectlombok:lombok'
 
