--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,10 +2,11 @@ server:
   port: 8080
 spring:
   datasource:
-    url: jdbc:h2:~/loan
-    username: sa
-    password:
-    driver-class-name: org.h2.Driver
+    # 도커 컨테이너 내 localhost를 바라보도록 url 수정
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://host.docker.internal:3306/loan?characterEncoding=UTF-8&serverTimeZone=Asia/Seoul
+    username: root
+    password: 1234
   jpa:
     hibernate:
       ddl-auto: create
@@ -14,11 +15,8 @@ spring:
         format_sql: true
       naming:
         physical-strategy: org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy
-    database-platform: org.hibernate.dialect.H2Dialect
-  h2:
-    console:
-      path: /h2-console
-      enabled: true
+    database: mysql
+    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
   servlet:
     multipart:
       max-file-size: 10MB
